--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "typo3/buildessentials",
-    "type": "flow3-build",
-    "description": "FLOW3 Build Toolchain Essentials",
+    "type": "flow-build",
+    "description": "TYPO3 Flow Build Toolchain Essentials",
     "license": ["LGPL-3.0+"],
     "require": {
         "php" : ">=5.3.2",
-        "flow3/composer-installers": "*"
+        "typo3/flow-composer-installers": "*"
     }
 }
