[BUGFIX] fix type of build package
Change-Id: I294e95615fb35c8f81968ecc43ecb270576230a3

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "typo3/buildessentials",
-    "type": "flow-build",
+    "type": "typo3-flow-build",
     "description": "TYPO3 Flow Build Toolchain Essentials",
     "license": ["LGPL-3.0+"],
     "require": {
