--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
     "require": {
         "php" : ">=5.3.2",
         "typo3/flow-composer-installers": "*"
-    }
+    },
+	"extra": {
+		"typo3/flow": {
+			"case-sensitive-package-name": "BuildEssentials"
+		}
+	}
 }
