[TASK] Use composer/installer setting for install-name
The default composer-installler supports this feature, so it will be
removed from our own customer-installer. Adopting to that change.

Change-Id: Ic41eda3049a3bf1cbac62454d30496e0a1b78acf

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,6 @@
         "typo3/flow-composer-installers": "*"
     },
 	"extra": {
-		"typo3/flow": {
-			"case-sensitive-package-name": "BuildEssentials"
-		}
+		"installer-name": "BuildEssentials"
 	}
 }
