[BUGFIX] Adjust build path in Phing tasks to composer directory name
The directory name Build/Common/* has been changed to
Build/BuildEssentials/*, but the Phing tasks still referred to the old
path. This patch fixes this issue.

Change-Id: Id7541d3f5c4e0829fe8a5e118520cb8853648755
Releases: 2.0, master

--- a/Phing/Phing.properties
+++ b/Phing/Phing.properties
@@ -1,5 +1,5 @@
 project.buildDirectory=${project.basedir}/Build/
-project.commonBuildDirectory=${project.basedir}/Build/Common/
+project.commonBuildDirectory=${project.basedir}/Build/BuildEssentials/
 project.reportsDirectory=${project.buildDirectory}Reports/
 project.archivesDirectory=${project.buildDirectory}Archives/
 project.temporaryDirectory=${project.buildDirectory}Temporary/
