--- a/Phing/Tasks.properties
+++ b/Phing/Tasks.properties
@@ -1,2 +1,2 @@
-phpuml=Build.Common.Phing.Tasks.PhpUmlTask
-setenvironment=Build.Common.Phing.Tasks.SetEnvironmentTask
+phpuml=Build.BuildEssentials.Phing.Tasks.PhpUmlTask
+setenvironment=Build.BuildEssentials.Phing.Tasks.SetEnvironmentTask
