--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "description": "TYPO3 Flow Build Toolchain Essentials",
     "license": ["LGPL-3.0+"],
     "require": {
-        "php" : ">=5.3.2",
-        "typo3/flow-composer-installers": "*"
+        "php": ">=5.3.2",
+        "composer/installers": "~1.0.2"
     },
-	"extra": {
-		"installer-name": "BuildEssentials"
-	}
+    "extra": {
+        "installer-name": "BuildEssentials"
+    }
 }
