[TASK] Change dependency to composer/installers
Also change configuration to match installers

Change-Id: I5c18073f29b37b784792c7c6f05d65321be3f6e4
Releases: 2.0, master

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "typo3/buildessentials",
-    "type": "typo3-flow-build",
-    "description": "TYPO3 Flow Build Toolchain Essentials",
-    "license": ["LGPL-3.0+"],
-    "require": {
-        "php" : ">=5.3.2",
-        "typo3/flow-composer-installers": "*"
-    },
+	"name": "typo3/buildessentials",
+	"type": "typo3-flow-build",
+	"description": "TYPO3 Flow Build Toolchain Essentials",
+	"license": ["LGPL-3.0+"],
+	"require": {
+		"php": ">=5.3.2",
+		"composer/installers": "~1.0.2"
+	},
 	"extra": {
 		"installer-name": "BuildEssentials"
 	}
