--- a/Crowdin/template-crowdin.yaml
+++ b/Crowdin/template-crowdin.yaml
@@ -6,3 +6,4 @@ files:
   -
     source: '/Resources/Private/Translations/en/*.xlf'
     translation: '/Resources/Private/Translations/%%two_letters_code%%/%%original_file_name%%'
+    update_option: 'update_as_unapproved'
