[BUGFIX] Upload xliff files recursively
In order to translate NodeTypes, we need to upload
files recursively to Crowdin, see

https://github.com/crowdin/crowdin-cli#configuration

Change-Id: I16b1d417cf8210520df3133927e3065324d2bb14
Releases: master, 3.0
Resolves: NEOS-1389

--- a/Crowdin/template-filesentry.yaml
+++ b/Crowdin/template-filesentry.yaml
@@ -1,4 +1,4 @@
   -
-    source: '%s/Resources/Private/Translations/en/*.xlf'
-    translation: '%s/Resources/Private/Translations/%%two_letters_code%%/%%original_file_name%%'
+    source: '%s/Resources/Private/Translations/en/**/*.xlf'
+    translation: '%s/Resources/Private/Translations/%%two_letters_code%%/**/%%original_file_name%%'
     update_option: 'update_as_unapproved'
