--- a/Crowdin/template-filesentry.yaml
+++ b/Crowdin/template-filesentry.yaml
@@ -1,4 +1,38 @@
   -
     source: '%s/Resources/Private/Translations/en/**/*.xlf'
-    translation: '%s/Resources/Private/Translations/%%two_letters_code%%/**/%%original_file_name%%'
+    translation: '%s/Resources/Private/Translations/%%locale_with_underscore%%/**/%%original_file_name%%'
     update_option: 'update_as_unapproved'
+    languages_mapping:
+      locale_with_underscore:
+        'af': 'af'
+        'ar': 'ar'
+        'ca': 'ca'
+        'zh-CN': 'zh'
+        'cs': 'cs'
+        'da': 'da'
+        'nl': 'nl'
+        'en': 'en'
+        'fi': 'fi'
+        'fr': 'fr'
+        'de': 'de'
+        'el': 'el'
+        'he': 'he'
+        'hu': 'hu'
+        'it': 'it'
+        'ja': 'ja'
+        'km': 'km'
+        'ko': 'ko'
+        'la-LA': 'la'
+        'lv': 'lv'
+        'mr': 'mr'
+        'no': 'no'
+        'pl': 'pl'
+        'pt-PT': 'pt'
+        'ro': 'ro'
+        'ru': 'ru'
+        'sr': 'sr'
+        'es-ES': 'es'
+        'sv-SE': 'sv'
+        'tr': 'tr'
+        'uk': 'uk'
+        'vi': 'vi'
