--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Neos Flow Build Toolchain Essentials",
     "license": ["LGPL-3.0+"],
     "require": {
-        "neos/composer-plugin": "^1.0.6|^2.0.0"
+        "neos/composer-plugin": "^2.0.0"
     },
     "replace": {
         "typo3/buildessentials": "self.version"
