FEATURE: Create build-tools script based on symfony/console
This currently contains an improved command for generating the changelog.
This command can also be used to generate a stub releasenote by setting a --filter=FEATURE and changing the target file.

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "description": "Neos Flow Build Toolchain Essentials",
     "license": ["LGPL-3.0+"],
     "require": {
-        "neos/composer-plugin": "^2.0.0"
+        "neos/composer-plugin": "^2.0.0",
+        "symfony/console": "^5.1",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "extra": {
         "installer-name": "BuildEssentials"
