--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "neos/composer-plugin": "^2.0.0",
         "symfony/console": "^5.1",
-        "guzzlehttp/guzzle": "^7.0"
+        "guzzlehttp/guzzle": "^6.0 || ^7.0"
     },
     "extra": {
         "installer-name": "BuildEssentials"
