--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Neos Flow Build Toolchain Essentials",
     "license": ["LGPL-3.0+"],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4 || ^8.0",
         "neos/composer-plugin": "^2.0.0",
         "symfony/console": "^5.1",
         "guzzlehttp/guzzle": "^6.0 || ^7.0"
